layouts: use Hugo's image resizing facilities

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -21,7 +21,8 @@
     <title>{{- if not .IsHome }}{{ .Title }} - {{ .Site.Title }}{{- else }}{{ .Site.Title }} - {{ .Site.Params.Tagline }}{{- end}}</title>
     <link href="https://fonts.googleapis.com/css?family=Ubuntu|Dosis" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.0.2/css/all.css" rel="stylesheet">
-    <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/style.css" />
+    {{ $stylesheet := resources.Get "scss/style.scss" | toCSS | minify }}
+    <link rel="stylesheet" href="{{ $stylesheet.Permalink }}" />
     {{- block "css" . }}{{- end }}
 
     {{ if eq (getenv "HUGO_ENV") "PRD" }}
