--- a/layouts/shortcodes/single-title-imgs-compare.html
+++ b/layouts/shortcodes/single-title-imgs-compare.html
@@ -1,4 +1,5 @@
 {{ $title := .Get 0 }}
+{{ $originals := (.Page.Resources.ByType "image") }}
 <div class="columns is-bottom-marginless">
     <div class="column is-bottom-paddingless juxtapose">
     {{ range $param := last 2 .Params }}
@@ -9,7 +10,10 @@
     {{ $split_src := split $src "." }}
     {{ $extension := index $split_src (sub (len $split_src) 1) }}
         {{- if eq $extension "png" -}}
-        <img src="{{ $src }}.jpg" alt="{{ $title }}">
+        {{ $original := $originals.GetMatch (printf "*%s" (path.Base $src)) }}
+        {{ $resized_width := math.Min $original.Width 1024 }}
+        {{ $resized := $original.Resize (print $resized_width "x q90 jpg" ) }}
+        <img src="{{ $resized.Permalink }}" alt="{{ $title }}">
         {{- else -}}
         <img src="{{ $src }}" alt="{{ $title }}">
         {{- end -}}
