--- a/layouts/entry/single.html
+++ b/layouts/entry/single.html
@@ -1,7 +1,9 @@
 {{ define "header" }}
+{{ $banner := (.Page.Resources.ByType "image").GetMatch "banner.png" }}
+{{ $resized := $banner.Resize "1280x q99 jpg" }}
 {{ $author := index .Site.Data.authors ( .Params.author | default "" ) }}
 {{ $coauthors := split ( .Params.coauthor | default "" ) "," }}
-<div class="mb-md blog-entry-header single" style="background-image: url('{{ .Site.BaseURL }}/{{ .Dir }}banner.png');background-repeat:no-repeat;background-size:contain;background-position:center;"></div>
+<div class="mb-md blog-entry-header single" style="background-image: url('{{ $resized.Permalink }}');background-repeat:no-repeat;background-size:contain;background-position:center;"></div>
 <div class="has-text-centered">
     <div>
         <span class="title px-md py-sm">{{ .Title }}</span>
