--- a/layouts/shortcodes/single-title-imgs.html
+++ b/layouts/shortcodes/single-title-imgs.html
@@ -1,4 +1,5 @@
 {{ $title := .Get 0 }}
+{{ $originals := (.Page.Resources.ByType "image") }}
 <div class="columns is-img-preview is-bottom-marginless">
     {{ range $param := last (sub (len .Params) 1) .Params }}
     <!-- image -->
@@ -16,7 +17,9 @@
         {{ else }}
             <a href="{{ $src }}" title="{{ $subtitle }}">
                 {{- if eq $extension "png" -}}
-                <img src="{{ $src }}.jpg" alt="{{ $title }}">
+                {{ $original := $originals.GetMatch (printf "*%s" (path.Base $src)) }}
+                {{ $resized := $original.Resize "800x q90 jpg" }}
+                <img src="{{ $resized.Permalink }}" alt="{{ $title }}">
                 {{- else -}}
                 <img src="{{ $src }}" alt="{{ $title }}">
                 {{- end -}}
