layouts/summary: assign a dedicated class to summary texts

--- a/layouts/partials/entry/summary.html
+++ b/layouts/partials/entry/summary.html
@@ -26,7 +26,7 @@
         <span class="h3 moment-timeago">{{ .Date.Format $.Site.Params.fmt.ISO8601 }}</span>
     </div>
     <div class="mt-md px-md">
-        <span class="h3">{{ .Summary }}</span>
+        <span class="h3 summary-text">{{ .Summary }}</span>
     </div>
     <div style="position: absolute; bottom: -5px; right: 0;" class="px-md py-sm has-background-dark">
         <span class="h3">
