layout/default: use Hugo to bundle the JS files

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -101,7 +101,8 @@
         </footer>
     </div>
 
-    <script src="{{ .Site.BaseURL }}/js/script.js"></script>
+    {{ $mainJs := resources.Match "js/**.js" | resources.Concat "js/script.js" | minify | fingerprint }}
+    <script src="{{ $mainJs.Permalink }}" integrity="{{ $mainJs.Data.Integrity }}"></script>
     {{- block "scripts" . }}{{- end }}
 
     {{- if eq (getenv "HUGO_ENV") "PRD" }}
