layouts: disable SRI fingerprinting ...
... since CORS policy is not possible to set in GitHub Pages

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -101,8 +101,8 @@
         </footer>
     </div>
 
-    {{ $mainJs := resources.Match "js/**.js" | resources.Concat "js/script.js" | minify | fingerprint }}
-    <script src="{{ $mainJs.Permalink }}" integrity="{{ $mainJs.Data.Integrity }}" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    {{ $mainJs := resources.Match "js/**.js" | resources.Concat "js/script.js" | minify }}
+    <script src="{{ $mainJs.Permalink }}"></script>
     {{- block "scripts" . }}{{- end }}
 
     {{- if eq (getenv "HUGO_ENV") "PRD" }}
