game/list: Improve wording, use more descriptive variable names

--- a/layouts/game/list.html
+++ b/layouts/game/list.html
@@ -3,7 +3,7 @@
    <div class="section pb-xs">
       <h1 class="title">Game Compatibility List</h1>
       <p class="content">
-         The compatibility list contains all the games we tested, sorted by how well they work on the emulator.
+         The compatibility list contains all the games that have been tested, sorted by how well they work on the emulator.
       </p>
       <table class="table is-fullwidth">
          <tbody>
@@ -25,8 +25,8 @@
 
 {{ define "main" }}
 <div id="game-listing">
-   <div class="container1">
-      <div class="div1">
+   <div class="pagination-search-container">
+      <div class="pagination-container">
          <ul class="pagination paginationTop is-pulled-left"></ul>
       </div>
       <div>
@@ -35,7 +35,7 @@
                <table>
                   <tr>
                      <td>
-                        <div class="input-group search-box div2">
+                        <div class="input-group search-box search-container">
                            <input type="text" class="search input is-rounded" id="search-box" placeholder="Search...">
                            <!-- <span class="clear-search input-group-addon">X</span> -->
                         </div>
